# docfliq-backend

./: .env.dev.example  .env.ec2.example  .env.example  .gitignore  Makefile  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.ec2.yml  docker-compose.yml  main.sh  nginx.ec2.conf  requirements-dev.txt
.claude/: settings.json
.claude/rules/: fastapi instructions.instructions.md
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml  deploy-uat.yml
infra/: main.tf
migrations/content/: alembic.ini
migrations/course/: alembic.ini
postman/: MS-1_Identity_Service.postman_collection.json
scripts/: create_superadmin.py  deploy.sh  health-check.sh  init-databases.sh  seed-data.py  setup-dev-env.sh
services/media/: .dockerignore  AWS.md  Dockerfile  README.md  docker-compose.yml  docker.sh  entrypoint.sh  how-it-works.md  main.sh  pyproject.toml  requirements.txt  run.sh  worker.sh
services/media/app/: config.py  database.py  exceptions.py  main.py  mediaconvert.py  rate_limit.py  redis_client.py  s3.py  task_queue.py  worker.py
services/media/app/asset/: constants.py  controller.py  dependencies.py  models.py  router.py  schemas.py  service.py
services/media/handlers/: __init__.py  image_processing.py  transcode.py
services/media/lambdas/image_process/: handler.py  processor.py  requirements.txt
services/media/lambdas/video_transcode/: callback.py  handler.py  mediaconvert_job.py
services/media/lambdas/virus_scan/: handler.py
services/media/tests/: __init__.py  test_handlers.py
shared/: README.md  pyproject.toml
shared/shared/: __init__.py
shared/shared/auth/: __init__.py  config.py  dependencies.py
shared/shared/constants/: __init__.py  roles.py  statuses.py
shared/shared/database/: __init__.py  postgres.py  redis_client.py
shared/shared/events/: __init__.py  schemas.py
shared/shared/middleware/: __init__.py  error_handler.py  request_id.py
shared/shared/models/: __init__.py  base.py  pagination.py  user.py
shared/shared/utils/: __init__.py  s3.py
(+287 files in other folders)
